2003-09-18  Philippe Elie  <phil.el@wanadoo.fr>

	* utils/opcontrol: overwrite all current settings with --separate,
	  this change behavior of --separate=kernel,library now we really setup
	  both in this case.

2003-09-18  John Levon  <levon@movementarian.org>

	* libpp/locate_images.cpp: rewrite a little

	* libutil++/op_bfd.cpp: set fsize to default to -1,
	for fake artificial symbol

2003-09-18  Philippe Elie  <phil.el@wanadoo.fr>

	* libpp/locate_images.h:
	* libpp/locate_images.cpp: find_module_path() extra bool parameter
	  to know if we fail to retrieve the image.
	* libpp/arrange_profiles.h:
	* libpp/arrange_profiles.cpp: use it and save this bool in
	  inverted_profile struct
	* libpp/profile_spec.cpp: update caller according

	* libutil++/op_bfd.h:
	* libutil++/op_bfd.cpp: use the above change to create fake op_bfd

	* pp/opgprof_options.cpp:
	* pp/opgprof.cpp: update caller but never allow fake op_bfd

	* pp/populate.cpp: allow to create fake op_bfd
	

2003-09-18  John Levon  <levon@movementarian.org>

	* dae/opd_image.c:
	* dae/opd_proc.c:
	* dae/opd_sample_files.c:
	* dae/oprofiled.c:
	* daemon/opd_image.c:
	* daemon/opd_image.h:
	* daemon/opd_kernel.c:
	* daemon/opd_sample_files.c:
	* daemon/oprofiled.c:
	* gui/oprof_start.cpp:
	* gui/oprof_start_config.cpp:
	* gui/oprof_start_config.h:
	* gui/ui/oprof_start.base.ui:
	* libabi/abi.cpp:
	* libabi/abi_test.cpp:
	* libabi/op_import.cpp:
	* libop/op_sample_file.h:
	* libpp/op_header.cpp:
	* utils/opcontrol: renamings of separate stuff

2003-09-17  Philippe Elie  <phil.el@wanadoo.fr>

	* dae/opd_kernel.c: thinko in opd_get_module_info(): we must take
	  care to re-use a previously created module not to create a new

2003-09-17  John Levon  <levon@movementarian.org>

	* daemon/opd_kernel.c: logging improvements

2003-09-17  Philippe Elie  <phil.el@wanadoo.fr>

	* dae/opd_kernel.c:
	* daemon/opd_kernel.c: fix use after free of module

2003-09-17  John Levon  <levon@movementarian.org>
