@@ -6,21 +6,18 @@ for some pointers and/or read HACKING and doc/CodingStyle.
 0.7 release
 -----------
 
+ o opgprof gives all warnings twice in typical case
  o locate_images should return flags on what failure happened, and we mark
    inverted_profile with that, and don't try to bfd_openr (pass in an invalid
    bool to bfd_openr ctor that generates the fake bfd_openr that would happen
    on bfd_openr failure)
  o why rel_to_abs_path in locate_images ??
- o add separate_thread_samples to opd_header or remove all separate from opd_header
- o make opgprof use inverted_profile API, then:
-   o hide separate class/inverted stuff inside libpp
+ o add separate_thread to opd_header or remove all separate from opd_header
+ o hide separate class/inverted stuff inside libpp
    o return if multiple apps in the single API call used by all frontends
  o thread separate GUI + docs
  o we need to handle thread separate without needing a useless -m tid
    (several processes w/o using threads)
- o sample-file: / binary: don't work in any useful way - can we fix this
-   by peeking at binary: value and faking the split_sample_file somehow ?
- o side-by-side opreport output (--compare - needs UI spec)
  o per-cpu profiling
  o output column shortname headers for opreport -l
 
@@ -54,6 +51,7 @@ Before 1.0 big stuff
  o add support for samples not belonging to any symbols probably through
    artificially created symbols (do we still need/want this ??)
  o opdiff
+ o side-by-side opreport output (--compare - needs UI spec) ???
  
 Before 1.0 little stuff
 -----------------------
@@ -92,6 +90,8 @@ Before 1.0 little stuff
  o the way we show kernel modules in 2.5 is not very obvious - "/oprofile"
  o gcc-cvs -include stdc++ doesn't use precompiled header, when it'll work
   we can remove pch-c++.h from cvs
+ o sample-file: / binary: don't work in any useful way - can we fix this
+   by peeking at binary: value and faking the split_sample_file somehow ?
 
 Documentation
 -------------
